--- a/index.html
+++ b/index.html
@@ -15,8 +15,13 @@
             <p ng-repeat="x in myArray">{{ x }}</p>
         </div>
 
+        <test-directive></test-directive>
+
+        </div>
+
     </body>
 
     <script src="app.js"></script>
     <script src="controller.js"></script>
+    <script src="custom-direcitve.js"></script>
 </html>
