--- a/index.html
+++ b/index.html
@@ -6,14 +6,18 @@
 
         <div ng-controller="myController">
             <p>Name : <input type="text" ng-model="name"></p>
-            <h1>Hello {{name}}</h1>
+            <h1>Hello {{name | uppercase}}</h1>
             Quantity: <input type="text" ng-model="quantity">
             Cost: <input type="text" ng-model="cost">
-            <p>Quantity * Cost = {{ quantity * cost }}</p>
+            <p>Quantity * Cost = {{ quantity * cost | currency:'€' }}</p>
             <!-- Object -->
             <p>{{ person.lastName }}</p>
             <!-- Arrays -->
-            <p ng-repeat="x in myArray">{{ x }}</p>
+            <p ng-repeat="x in myArray | filter:'4'">{{ x }}</p>
+            Filter table: <input type="text" ng-model="filter_test">
+            <ul>
+                <li ng-repeat="x in names | filter:filter_test">{{ x }}</li>
+            </ul>
             <!-- On click -->
             <h3 ng-click="changeName()">{{ startingVar }}</h3>
         </div>
